--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Hero Section Start -->
     <section
       id="home"
-      class="min-h-screen flex items-center bg-[url('/img/testing.jpg')] bg-no-repeat bg-cover bg-center relative"
+      class="min-h-screen flex items-center hero-image bg-no-repeat bg-cover bg-center relative"
     >
       <main class="min-[450px]:pl-24 max-[450px]:pl-12 max-w-4xl">
         <h1 class="text-8xl text-white font-bold shadow-sm">
