--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Hero Section Start -->
     <section
       id="home"
-      class="min-h-screen flex items-center hero-image bg-no-repeat bg-cover bg-center relative"
+      class="min-h-screen flex items-center bg-hero-image bg-no-repeat bg-cover bg-center relative"
     >
       <main class="min-[450px]:pl-24 max-[450px]:pl-12 max-w-4xl">
         <h1 class="text-8xl text-white font-bold shadow-sm">
@@ -165,31 +165,31 @@
 
         <div class="w-full px-4 flex flex-wrap justify-center">
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Baso -</h3>
           </div>
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Sosis -</h3>
           </div>
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Crab Stick -</h3>
           </div>
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Udang -</h3>
           </div>
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Keju -</h3>
           </div>
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Gurita -</h3>
           </div>
           <div class="text-center pb-16 px-4">
-            <img src="/img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
+            <img src="img/menu.jpg" alt="menu" class="rounded-[80%] w-60" />
             <h3 class="mt-4 mx-auto mb-2">- Cumi -</h3>
           </div>
         </div>
